--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mateuscoury.github.io/frontend-onlinestore/",
+  "homepage": "https://mateuscoury.github.io/ecommercetrybe/",
   "name": "sd-0x-project-frontend-online-store",
   "version": "0.1.0",
   "private": true,
